[package]
name = "first-ok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["trust-dns"] }
