[package]
name = "first-ok"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/auoie/first-ok"
authors = ["auoie"]
license = "MIT"
description = """
This provides the function `first_ok::get_first_ok_bounded` which takes an async function and a set of items.
It applies the async function to all of the items and returns the first `Ok` result.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["trust-dns"] }
